--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "ember-fhir-adapter": "*",
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "0.2.3",
     "ember-cli-app-version": "0.3.3",
